# video-tagging

./: .env.example  .gitignore  pyproject.toml  requirements.txt
agent-os/: config.yml
agent-os/commands/create-tasks/: 2-create-tasks-list.md  create-tasks.md
agent-os/commands/implement-tasks/: 2-implement-tasks.md  implement-tasks.md
agent-os/commands/write-spec/: write-spec.md
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/: audio-pipeline-architecture.md
agent-os/specs/2026-01-20-airtable-integration/: spec.md  tasks.md
agent-os/specs/2026-01-20-airtable-integration/planning/: initialization.md  requirements.md
agent-os/specs/2026-01-20-config-credentials/: spec.md  tasks.md
agent-os/specs/2026-01-20-config-credentials/planning/: initialization.md  requirements.md
agent-os/specs/2026-01-20-local-video-processing/: spec.md  tasks.md
agent-os/specs/2026-01-20-synology-integration/: spec.md  tasks.md
agent-os/specs/2026-01-20-tui-framework/: spec.md  tasks.md
agent-os/specs/2026-01-29-dynamic-visual-hook-tagging/: spec.md  tasks.md
agent-os/specs/2026-01-29-dynamic-visual-hook-tagging/planning/: initialization.md  requirements.md
agent-os/standards/automations/: python.md
agent-os/standards/backend/: technology.md
agent-os/standards/frontend/: technologies.md
agent-os/standards/global/: tech-stack.md
src/videotagger/: __init__.py  __main__.py  airtable.py  audio_analysis.py  audio_extract.py  cache.py  config.py  exceptions.py  llm.py  logging_config.py  pipeline.py  prosody.py  runpod_api.py  runpod_processor.py  runpod_s3.py  sidecar.py  synology.py  video.py
src/videotagger/tui/: __init__.py  app.py
src/videotagger/tui/screens/: __init__.py  (+7 more)
tests/: __init__.py  test_airtable.py  test_audio.py  test_cli.py  test_config.py  test_llm.py  test_sidecar.py  test_video.py
